--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,13 @@ edition = "2021"
 license = "MIT"
 repository = "https://github.com/robertohuertasm/yarn-lock-parser"
 readme = "README.md"
-keywords = ["yarn"]
+keywords = ["yarn", "parser"]
 categories = ["parsing"]
 
 exclude = [
   ".github/*",
-  "yarn.lock"
+  "tests/*",
+  
 ]
 
 [badges]
