--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,25 +15,23 @@ jobs:
       fail-fast: true
       matrix:
         rust: [stable]
-        os: [windows-2019] # we could add macOS-latest & windows-latest but don't need it for the moment
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - name: Setup Rust
         uses: hecrj/setup-rust-action@master
         with:
           rust-version: ${{ matrix.rust }}
-          # components: rustfmt, clippy
-      # - name: Install cargo-make
-      #   uses: actions-rs/cargo@v1
-      #   with:
-      #     command: install
-      #     args: --debug cargo-make
+          components: rustfmt, clippy
+      - name: Install cargo-make
+        uses: actions-rs/cargo@v1
+        with:
+          command: install
+          args: --debug cargo-make
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Tests
-        run: cargo test -- --nocapture
-      # - name: Run cargo fmt
-      #   run: cargo make format
-      # - name: Run cargo clippy
-      #   run: cargo make clippy
-      # - name: Run tests
-      #   run: cargo make test
+      - name: Run cargo fmt
+        run: cargo make format
+      - name: Run cargo clippy
+        run: cargo make clippy
+      - name: Run tests
+        run: cargo make test
