only run fmt and clippy for ubuntu

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,11 +17,17 @@ jobs:
         rust: [stable]
         os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
-      - name: Setup Rust
+      - name: Setup Rust (with fmt and clippy)
+        if: matrix.os == 'ubuntu-latest'
         uses: hecrj/setup-rust-action@master
         with:
           rust-version: ${{ matrix.rust }}
           components: rustfmt, clippy
+      - name: Setup Rust
+        if: matrix.os != 'ubuntu-latest'
+        uses: hecrj/setup-rust-action@master
+        with:
+          rust-version: ${{ matrix.rust }}
       - name: Install cargo-make
         uses: actions-rs/cargo@v1
         with:
@@ -30,8 +36,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Run cargo fmt
+        if: matrix.os == 'ubuntu-latest'
         run: cargo make format
       - name: Run cargo clippy
+        if: matrix.os == 'ubuntu-latest'
         run: cargo make clippy
       - name: Run tests
         run: cargo make test
