--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,23 +15,20 @@ jobs:
       fail-fast: true
       matrix:
         rust: [stable]
-        os: [ubuntu-latest] # we could add macOS-latest & windows-latest but don't need it for the moment
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
-      - name: Setup Rust
+      - name: Setup Rust (with fmt and clippy)
         uses: hecrj/setup-rust-action@master
         with:
           rust-version: ${{ matrix.rust }}
           components: rustfmt, clippy
-      - name: Install cargo-make
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: --debug cargo-make
       - name: Checkout
         uses: actions/checkout@v2
       - name: Run cargo fmt
-        run: cargo make format
+        if: matrix.os == 'ubuntu-latest'
+        run: cargo fmt --all -- --check
       - name: Run cargo clippy
-        run: cargo make clippy
+        if: matrix.os == 'ubuntu-latest'
+        run: cargo clippy
       - name: Run tests
-        run: cargo make test
+        run: cargo test
