--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "yarn.lock parser"
 version = "0.7.0"
 authors = [
   "Roberto Huertas <roberto.huertas@outlook.com>",
-  "Riccardo Attilio Galli <riccardo@sideralis.org>"
+  "Riccardo Attilio Galli <riccardo@sideralis.org>",
 ]
 edition = "2021"
 license = "MIT"
@@ -13,15 +13,11 @@ readme = "README.md"
 keywords = ["yarn", "parser"]
 categories = ["parsing"]
 
-exclude = [
-  ".github/*",
-  "tests/*",
-  
-]
+exclude = [".github/*", "tests/*"]
 
 [badges]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
 nom = "7.1.3"
-thiserror = "1.0.40"
+thiserror = "2.0.4"
