--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ exclude = [".github/*", "tests/*"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-nom = "7.1.3"
+nom = "8.0.0-beta.1"
+nom-language = "0.1.0-alpha.1"
 thiserror = "2.0.4"
