Upgrade nom to 8 (#25)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ exclude = [".github/*", "tests/*"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-nom = "7.1.3"
-thiserror = "2.0.4"
+nom = "8.0.0"
+nom-language = "0.1.0"
+thiserror = "2.0.11"
